third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/bug_16592.move
script {
    fun main() {
        let f = |x| x + 1;
        assert!(f(1) == 2);
    }
}
